--- a/activitytest/src/main/res/layout/four_layout.xml
+++ b/activitytest/src/main/res/layout/four_layout.xml
@@ -3,14 +3,16 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <Button
-        android:id="@+id/button_2"
+        android:id="@+id/button_4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button 2"
+        android:text="Button 4"
         />
 
     <TextView
         android:id="@+id/TextView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="test text View"
+        />
 </LinearLayout>
