--- a/uiwidgettest/src/main/res/layout/action_main.xml
+++ b/uiwidgettest/src/main/res/layout/action_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal">
 
 
     <EditText
         android:id="@+id/input_message"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:hint="Type something"
@@ -17,4 +17,5 @@
 
         android:text="Send"
     />
+
 </LinearLayout>
