learning broadcast test 1028 16:27

--- a/broadcastbestpractice/src/main/res/layout/login.xml
+++ b/broadcastbestpractice/src/main/res/layout/login.xml
@@ -18,7 +18,7 @@
         <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:stretchColumns="1">
+           >
 
             <TableRow>
                 <android.support.v7.widget.AppCompatTextView
@@ -40,10 +40,20 @@
             </TableRow>
 
             <TableRow>
+                <android.support.v7.widget.AppCompatCheckBox
+                    android:id="@+id/remember"
+                    android:layout_height="wrap_content"
+                    />
+                <android.support.v7.widget.AppCompatTextView
+                    android:layout_height="wrap_content"
+                    android:text="Remember Password"/>
+            </TableRow>
+
+            <TableRow>
                 <android.support.v7.widget.AppCompatButton
                     android:id="@+id/login"
                     android:layout_height="wrap_content"
-                   android:layout_weight="1"
+                   android:layout_weight="2"
                     android:text="Login"
                     />
 
