--- a/contactstest/src/main/res/layout/fragment_page.xml
+++ b/contactstest/src/main/res/layout/fragment_page.xml
@@ -1,7 +1,6 @@
-<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.jerometian.contactstest.PageFragment">-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
     <!-- TODO: Update blank fragment layout -->
 <android.support.v7.widget.AppCompatTextView
@@ -9,6 +8,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:text="@string/hello_blank_fragment"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
-<!--
-</FrameLayout>-->
+    />
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/recyclerview_1"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    />
+
+    
+</LinearLayout>
