--- a/contactstest/src/main/res/layout/fragment_page.xml
+++ b/contactstest/src/main/res/layout/fragment_page.xml
@@ -1,18 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent" >
 
     <!-- TODO: Update blank fragment layout -->
 <android.support.v7.widget.AppCompatTextView
     android:id="@+id/textViewinFrame"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:text="@string/hello_blank_fragment"
     />
+
 <android.support.v7.widget.RecyclerView
     android:id="@+id/recyclerview_1"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:scrollbars="vertical"
     />
 
     
