--- a/contactstest/src/main/res/layout/activity_main.xml
+++ b/contactstest/src/main/res/layout/activity_main.xml
@@ -5,12 +5,12 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
 android:layout_height="match_parent" android:fitsSystemWindows="true"
 tools:context=".MainActivity">
-<android.support.design.widget.AppBarLayout android:layout_height="match_parent"
+<android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
     android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
 
-<!--<android.support.v7.widget.Toolbar android:id="@+id/toolbar"
+<android.support.v7.widget.Toolbar android:id="@+id/toolbar"
     android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
-    android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />-->
+    android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout1"
@@ -18,14 +18,11 @@ tools:context=".MainActivity">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+</android.support.design.widget.AppBarLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
-        android:background="@android:color/white" />
-
-
-</android.support.design.widget.AppBarLayout>
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
