--- a/contactstest/src/main/res/layout/fragment_page.xml
+++ b/contactstest/src/main/res/layout/fragment_page.xml
@@ -3,19 +3,16 @@
     android:layout_height="match_parent" >
 
     <!-- TODO: Update blank fragment layout -->
-<android.support.v7.widget.AppCompatTextView
+<!--<android.support.v7.widget.AppCompatTextView
     android:id="@+id/textViewinFrame"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/hello_blank_fragment"
-    />
-
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/recyclerview_1"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:scrollbars="vertical"
-    />
-
-    
+    />-->
+         <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerview_1"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:scrollbars="vertical"
+                />
 </LinearLayout>
