--- a/networktest/src/main/res/layout/activity_main.xml
+++ b/networktest/src/main/res/layout/activity_main.xml
@@ -2,4 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+<Button android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:id="@+id/GetCommand"
+    android:text="Get Command"/>
+
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/myTextView"
+            />
+    </ScrollView>
 </LinearLayout>
