--- a/coolweather/src/main/res/layout/recyclerview_item.xml
+++ b/coolweather/src/main/res/layout/recyclerview_item.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    android:id="@+id/item_container"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+
+    android:orientation="vertical"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/area_title"
     android:layout_width="match_parent"
-    android:layout_height="40dp">
+    android:layout_height="40dp"/>
+    </LinearLayout>
 
-
-</TextView>
